--- a/index.html
+++ b/index.html
@@ -376,20 +376,20 @@
     <nav>
         <img src="./picture/logo.jpg">
         <ul>
-            <li><a class="icon1" href="#">HOME</a></li>
-            <li><a class="icon1" href="#">ABOUT</a></li>
-            <li><a class="icon1" href="#">TEAM</a></li>
-            <li><a class="icon1" href="#">SERVICE</a></li>
-            <li><a class="icon1" href="#">PORTFOLIO</a></li>
-            <li><a class="icon1" href="#">PRICE</a></li>
-            <li><a class="icon1" href="#">BLOG</a></li>
-            <li><a class="icon1" href="#">CONTACT</a></li>
+            <li><a class="icon1" href="#home">HOME</a></li>
+            <li><a class="icon1" href="#about">ABOUT</a></li>
+            <li><a class="icon1" href="#team">TEAM</a></li>
+            <li><a class="icon1" href="#service">SERVICE</a></li>
+            <li><a class="icon1" href="#portfolio">PORTFOLIO</a></li>
+            <li><a class="icon1" href="#price">PRICE</a></li>
+            <li><a class="icon1" href="#blog">BLOG</a></li>
+            <li><a class="icon1" href="#contact">CONTACT</a></li>
             <li><a  href="#" style="border: 1px solid #71cf71; background-color: #71cf71;"><i class="fa-solid fa-magnifying-glass" style="color: antiquewhite;"></i></a></li>
         </ul>
     </nav>
 </header>
 <hr>
-    <div class="welcome_wrappres">
+    <div class="welcome_wrappres" id="home">
         <div class="welcome_to_nex">
             <h1>Welcome to <span style="color: green;">Nex</span></h1>
             <hr width="50px">
@@ -424,7 +424,7 @@
         <div class="image">
             <img src="picture/Imagea.jpg">
         </div>
-        <div class="about">
+        <div class="about" id="about">
             <h3>About <span style="color: green;">Nex</span> design</h3>
             <br>
             <hr width="100px">
@@ -457,7 +457,7 @@
     </div>
     </div>
     <div class="meet_our_wrappers">
-        <div class="team">
+        <div class="team" id="team">
             <h1>Meet Our Team</h1>
             <hr width="50px">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis, necessitatibus. Illum sed, iure,
@@ -487,7 +487,7 @@
             <P>Senior Designer</P>
         </div>
     </div>
-    <div class="service_wrappers">
+    <div class="service_wrappers" id="service">
         <div class="we_offer">
             <h2>Service We Offer</h2>
             <hr width="50px">
@@ -536,7 +536,7 @@
 
         </div>
     </div>
-    <div class="recent_wrappers">
+    <div class="recent_wrappers" id="portfolio">
         <div class="portfolio">
             <h2>Recent Portfolio</h2>
             <hr width="50px">
